# memmy

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  agent-loop-v1.md  chunk-01-memmy-expr-foundation.md  chunk-02-memmy-expr-address.md  chunk-03-memmy-expr-top-level.md  chunk-04-memmy-exec-requirements.md  chunk-05-memmy-exec-address-resolution.md  chunk-06-memmy-exec-pointer-chains.md  chunk-07-cli-expr-address.md  chunk-08-memmy-exec-peek-poke.md  chunk-09-ranges-pattern-scan.md  chunk-1.md  chunk-10-whole-process-value-scan.md  chunk-10.md  chunk-11-output-errors-help.md  chunk-2.md  chunk-3.md  chunk-4.md  chunk-5.md  chunk-6.md  chunk-7.md  chunk-8.md  chunk-8b.md  chunk-9.md  chunk-agent-loop.md  justfile  spec-changes.md  spec-v0.md  spec-v1.md  spec.md
.github/workflows/: build.yml  ci.yml
base/: CMakeLists.txt
base/include/: base.h  base_arena.h  base_avl.h  base_bitset.h  base_checked.h  base_compiler.h  base_core.h  base_fs.h  base_hash.h  base_hashmap.h  base_list.h  base_math.h  base_memory.h  base_os.h  base_process.h  base_regex.h  base_sort.h  base_string.h
base/src/: base_arena.c  base_avl.c  base_bitset.c  base_checked.c  base_compiler.c  base_fs.c  base_hash.c  base_hashmap.c  base_list.c  base_math.c  base_memory.c  base_os.c  base_process.c  base_regex.c  base_sort.c  base_string.c
base/src/platform/: base_os_posix.c  base_os_win32.c
cmd/: CMakeLists.txt
cmd/memmy/: CMakeLists.txt  memmy_cli.c  memmy_cli.h  memmy_cli_internal.h  memmy_cli_regions.c  memmy_cli_scan.c  memmy_main.c
docs/: memmy-dsl-pocket-reference.md  memory-expression-grammar.ebnf  plan.md  spec-v0.md  spec-v1.md  v0-traceability.md  windows-smoke-tests.md
memmy/: CMakeLists.txt
memmy/include/: memmy.h  memmy_backend.h  memmy_context.h  memmy_process.h  memmy_range.h  memmy_scan.h  memmy_status.h  memmy_types.h  memmy_value.h
memmy/src/: memmy_backend.c  memmy_context.c  memmy_process.c  memmy_range.c  memmy_scan.c  memmy_status.c  memmy_value.c
memmy/src/platform/: memmy_backend_darwin.c  (+3 more)
memmy_ast/: CMakeLists.txt
memmy_ast/include/: memmy_ast.h
memmy_ast/src/: memmy_ast.c  memmy_ast_disasm_x64.c  memmy_ast_lexer.c  memmy_ast_parse_expr.c  memmy_ast_parse_postfix.c  memmy_ast_parse_statement.c  memmy_ast_parser.h
memmy_cli/: CMakeLists.txt
memmy_cli/include/: memmy_cli.h
memmy_cli/src/: memmy_cli.c  memmy_cli_dsl.c  memmy_cli_expr.c  memmy_cli_internal.h  memmy_cli_mods.c  memmy_cli_peek.c  memmy_cli_poke.c  memmy_cli_procs.c  memmy_cli_regions.c  memmy_cli_repl.c  memmy_cli_scan.c  memmy_cli_tutorial.c
memmy_dsl/: CMakeLists.txt
memmy_dsl/include/: memmy_dsl.h  memmy_expr.h
memmy_dsl/src/: memmy_dsl_address.c  memmy_dsl_const.c  memmy_dsl_memory.c  memmy_dsl_statement.c  memmy_dsl_target.c
memmy_eval/: CMakeLists.txt
memmy_eval/include/: memmy_eval.h
memmy_eval/src/: memmy_eval.c  memmy_eval_command.c  memmy_eval_disasm_x64.c  memmy_eval_env.c  memmy_eval_internal.h  memmy_eval_memory.c  memmy_eval_process.c  memmy_eval_scan.c  memmy_eval_value.c
memmy_exec/: CMakeLists.txt
memmy_exec/include/: memmy_exec.h
memmy_exec/src/: memmy_exec_address.c  memmy_exec_peek_poke.c  memmy_exec_range_scan.c  memmy_exec_requirements.c  memmy_exec_statement.c  memmy_exec_variable.c
memmy_expr/: CMakeLists.txt
memmy_expr/include/: memmy_expr.h
memmy_expr/src/: memmy_expr_address.c  memmy_expr_const.c  memmy_expr_memory.c  memmy_expr_target.c
src/: lib.rs
unittest/: CMakeLists.txt  discover_memmy_tests.cmake  test_framework.c  test_framework.h  unittest_main.c
unittest/base/: test_base_arena.c  test_base_avl.c  test_base_bitset.c  test_base_checked.c  test_base_fs.c  test_base_hash.c  test_base_hashmap.c  test_base_list.c  test_base_math.c  test_base_memory.c  test_base_process.c  test_base_regex.c  test_base_sort.c  test_base_string.c  test_base_string_split.c
unittest/memmy/: test_memmy.c  test_memmy_ast.c  test_memmy_ast_address_ops.c  test_memmy_ast_common.h  test_memmy_ast_diagnostics.c  test_memmy_ast_disasm_x64.c  test_memmy_ast_expr.c  test_memmy_ast_postfix.c  test_memmy_ast_statement.c  test_memmy_backend.c  test_memmy_backend.h  test_memmy_cli.c  test_memmy_cli_disasm_x64.c  test_memmy_cli_dsl.c  test_memmy_cli_expr.c  test_memmy_cli_mods.c  test_memmy_cli_peek.c  test_memmy_cli_poke.c  test_memmy_cli_procs.c  test_memmy_cli_pscan.c  test_memmy_cli_regions.c  test_memmy_cli_repl.c  test_memmy_cli_scan.c  test_memmy_cli_tutorial.c  test_memmy_common.c  test_memmy_common.h  test_memmy_context.c  test_memmy_default_backend.c  test_memmy_dsl_address.c  test_memmy_dsl_const.c  test_memmy_dsl_memory.c  test_memmy_dsl_range.c  test_memmy_dsl_statement.c  test_memmy_dsl_target.c  test_memmy_eval.c  test_memmy_eval_command.c  test_memmy_eval_common.h  test_memmy_eval_core_value.c  test_memmy_eval_disasm_x64.c  test_memmy_eval_memory.c  (+21 more)
(+4 files in other folders)
