[package]
name = "memmy"
description = "A simple memory hacking library"
authors = ["cursey"]
repository = "https://github.com/cursey/memmy"
license = "BSL-1.0"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]
